--- a/public/stylesheets/components/lists.css
+++ b/public/stylesheets/components/lists.css
@@ -1,141 +1,62 @@
-/*
-Syntax error: Undefined variable: "$ORANGE".
-        on line 81 of /Users/dalton/Desktop/WORK/searchandrestore/public/stylesheets/sass/components/lists.scss
-
-76:     margin: 0 0 5px 0;
-77:     dd, dt {float: left;}
-78:     dt {
-79:       font-size: 14px;
-80:       font-weight: bold;
-81:       color: $ORANGE;
-82:       padding-right: 5px;
-83:       clear: both;
-84:     }
-85:     dd {
-86:       color: #ccc;
-
-Backtrace:
-/Users/dalton/Desktop/WORK/searchandrestore/public/stylesheets/sass/components/lists.scss:81
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/script/variable.rb:50:in `_perform'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/script/node.rb:40:in `perform'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:215:in `visit_prop'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:18:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `map'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:27:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:39:in `with_environment'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:26:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:235:in `visit_rule'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:18:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `map'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:27:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:39:in `with_environment'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:26:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:235:in `visit_rule'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:18:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `map'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:27:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:39:in `with_environment'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:26:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:235:in `visit_rule'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:18:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `map'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:53:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:27:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:39:in `with_environment'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:26:in `visit_children'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:47:in `visit_root'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `send'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/base.rb:37:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:18:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:7:in `send'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/visitors/perform.rb:7:in `visit'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/tree/root_node.rb:20:in `render'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/engine.rb:293:in `_render'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/engine.rb:241:in `render'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/util.rb:297:in `silence_sass_warnings'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/engine.rb:241:in `render'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/plugin/compiler.rb:319:in `update_stylesheet'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/plugin/compiler.rb:181:in `update_stylesheets'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/plugin/compiler.rb:175:in `each'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/plugin/compiler.rb:175:in `update_stylesheets'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/plugin/compiler.rb:173:in `each'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/plugin/compiler.rb:173:in `update_stylesheets'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/sass-3.1.7/lib/sass/../sass/plugin/rack.rb:51:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/warden-1.0.5/lib/warden/manager.rb:35:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/warden-1.0.5/lib/warden/manager.rb:34:in `catch'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/warden-1.0.5/lib/warden/manager.rb:34:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/head.rb:14:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/methodoverride.rb:24:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/params_parser.rb:21:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/flash.rb:182:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/session/abstract_store.rb:149:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/cookies.rb:302:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/activerecord-3.0.4/lib/active_record/query_cache.rb:32:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/activerecord-3.0.4/lib/active_record/connection_adapters/abstract/query_cache.rb:28:in `cache'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/activerecord-3.0.4/lib/active_record/query_cache.rb:12:in `cache'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/activerecord-3.0.4/lib/active_record/query_cache.rb:31:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/activerecord-3.0.4/lib/active_record/connection_adapters/abstract/connection_pool.rb:354:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/callbacks.rb:46:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/activesupport-3.0.4/lib/active_support/callbacks.rb:415:in `_run_call_callbacks'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/callbacks.rb:44:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/sendfile.rb:106:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/remote_ip.rb:48:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/show_exceptions.rb:47:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/railties-3.0.4/lib/rails/rack/logger.rb:13:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/runtime.rb:17:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/activesupport-3.0.4/lib/active_support/cache/strategy/local_cache.rb:72:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/lock.rb:11:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/lock.rb:11:in `synchronize'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/lock.rb:11:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/actionpack-3.0.4/lib/action_dispatch/middleware/static.rb:30:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/railties-3.0.4/lib/rails/application.rb:168:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/railties-3.0.4/lib/rails/application.rb:77:in `send'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/railties-3.0.4/lib/rails/application.rb:77:in `method_missing'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/railties-3.0.4/lib/rails/rack/log_tailer.rb:14:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/content_length.rb:13:in `call'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/handler/webrick.rb:52:in `service'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/httpserver.rb:104:in `service'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/httpserver.rb:65:in `run'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/server.rb:173:in `start_thread'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/server.rb:162:in `start'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/server.rb:162:in `start_thread'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/server.rb:95:in `start'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/server.rb:92:in `each'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/server.rb:92:in `start'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/server.rb:23:in `start'
-/Users/dalton/.rvm/rubies/ruby-1.8.7-p352/lib/ruby/1.8/webrick/server.rb:82:in `start'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/handler/webrick.rb:13:in `run'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/rack-1.2.4/lib/rack/server.rb:217:in `start'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/railties-3.0.4/lib/rails/commands/server.rb:65:in `start'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/railties-3.0.4/lib/rails/commands.rb:30
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/railties-3.0.4/lib/rails/commands.rb:27:in `tap'
-/Users/dalton/.rvm/gems/ruby-1.8.7-p352@searchandrestore/gems/railties-3.0.4/lib/rails/commands.rb:27
-script/rails:6:in `require'
-script/rails:6
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Undefined variable: \"$ORANGE\".\A         on line 81 of /Users/dalton/Desktop/WORK/searchandrestore/public/stylesheets/sass/components/lists.scss\A \A 76:     margin: 0 0 5px 0;\A 77:     dd, dt {float: left;}\A 78:     dt {\A 79:       font-size: 14px;\A 80:       font-weight: bold;\A 81:       color: $ORANGE;\A 82:       padding-right: 5px;\A 83:       clear: both;\A 84:     }\A 85:     dd {\A 86:       color: #ccc;"; }
+.jazz ul.containers li {
+  margin-bottom: 6px; }
+.jazz ul.with-gaps li {
+  margin-bottom: 8px; }
+.jazz ul.inline-list {
+  overflow: hidden; }
+  .jazz ul.inline-list li {
+    float: left;
+    margin-right: 3px;
+    padding-bottom: 4px; }
+    .jazz ul.inline-list li.last {
+      margin-right: 0px; }
+.jazz ul li.last {
+  margin-bottom: 0px !important; }
+.jazz ul.grid-view li {
+  margin-right: 10px; }
+  .jazz ul.grid-view li.container {
+    background: none; }
+  .jazz ul.grid-view li.last {
+    margin-right: 0px; }
+  .jazz ul.grid-view li.first {
+    clear: both; }
+  .jazz ul.grid-view li .body {
+    background-color: #fff;
+    margin-bottom: 10px;
+    padding: 5px 5px 5px 5px; }
+    .jazz ul.grid-view li .body img {
+      margin: 0;
+      padding: 0;
+      display: block; }
+    .jazz ul.grid-view li .body .name {
+      margin-bottom: 2px;
+      margin-top: 3px; }
+    .jazz ul.grid-view li .body .byline {
+      margin-bottom: 0px;
+      padding-left: 5px;
+      white-space: nowrap; }
+.jazz ul.header-meta-list .byline {
+  margin-bottom: 2px; }
+  .jazz ul.header-meta-list .byline .date {
+    color: #666; }
+  .jazz ul.header-meta-list .byline .author,
+  .jazz ul.header-meta-list .byline .location {
+    color: #ccc; }
+.jazz ul.header-meta-list li {
+  margin-bottom: 10px; }
+.jazz dl {
+  overflow: hidden;
+  margin: 0 0 5px 0; }
+  .jazz dl dd, .jazz dl dt {
+    float: left; }
+  .jazz dl dt {
+    font-size: 14px;
+    font-weight: bold;
+    color: #ff9900;
+    padding-right: 5px;
+    clear: both; }
+  .jazz dl dd {
+    color: #ccc;
+    font-size: 12px;
+    margin: 0px;
+    line-height: 18px; }
