modified banner position

--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -154,8 +154,9 @@ p {
 }
 .banner {
   position: relative;
-  top: -60px;
-  left: 555px;
+  width: 468px;
+  top: -81px;
+  left: 480px;
 }
 body {
   &.page-home {
