--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -821,8 +821,9 @@ p {
 
 .banner {
   position: relative;
-  top: -60px;
-  left: 555px; }
+  width: 468px;
+  top: -81px;
+  left: 480px; }
 
 body.page-home .nav li#nav-home a {
   background-color: #ff9900; }
