--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -145,9 +145,9 @@ p {
   }
 }
 .banner {
-  position: relative;
+  position: absolute;
   width: 468px;
-  top: -81px;
+  top: 67px;
   left: 480px;
 }
 body {
